test/lit/pto/tgemv_mx_emitc.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @tgemv_mx_emitc(%a : !pto.tile_buf<loc=left, dtype=f8E4M3, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>,
                            %b : !pto.tile_buf<loc=right, dtype=f8E4M3, rows=128, cols=16, v_row=128, v_col=16, blayout=row_major, slayout=col_major, fractal=512, pad=0>) {
    %a_scale = pto.alloc_tile : !pto.tile_buf<loc=scaling, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=row_major, fractal=512, pad=0>
    %b_scale = pto.alloc_tile : !pto.tile_buf<loc=scaling, dtype=f16, rows=128, cols=16, v_row=128, v_col=16, blayout=row_major, slayout=row_major, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=col_major, slayout=row_major, fractal=1024, pad=0>

    pto.tgemv.mx ins(%a, %a_scale, %b, %b_scale : !pto.tile_buf<loc=left, dtype=f8E4M3, rows=1, cols=128, v_row=1, v_col=128, blayout=col_major, slayout=row_major, fractal=512, pad=0>, !pto.tile_buf<loc=scaling, dtype=f16, rows=1, cols=128, v_row=1, v_col=128, blayout=row_major, slayout=row_major, fractal=512, pad=0>, !pto.tile_buf<loc=right, dtype=f8E4M3, rows=128, cols=16, v_row=128, v_col=16, blayout=row_major, slayout=col_major, fractal=512, pad=0>, !pto.tile_buf<loc=scaling, dtype=f16, rows=128, cols=16, v_row=128, v_col=16, blayout=row_major, slayout=row_major, fractal=512, pad=0>) outs(%dst : !pto.tile_buf<loc=acc, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=col_major, slayout=row_major, fractal=1024, pad=0>)

    return
  }
}

// CHECK: error: 'pto.tgemv.mx' op expects A5 mx lhs/rhs element types to be a supported fp8/fp8 or fp4/fp4 pair
